checklests changes _STA

--- a/Test Documentation/Checklists/Web_app/Checklists for learn.epam.com _STA course.files/sheet001.htm
+++ b/Test Documentation/Checklists/Web_app/Checklists for learn.epam.com _STA course.files/sheet001.htm
@@ -1,5 +1,4 @@
-<html xmlns:v="urn:schemas-microsoft-com:vml"
-xmlns:o="urn:schemas-microsoft-com:office:office"
+<html xmlns:o="urn:schemas-microsoft-com:office:office"
 xmlns:x="urn:schemas-microsoft-com:office:excel"
 xmlns="http://www.w3.org/TR/REC-html40">
 
@@ -47,34 +46,34 @@ else
 
 <table border=0 cellpadding=0 cellspacing=0 width=1414 style='border-collapse:
  collapse;table-layout:fixed;width:1061pt'>
- <col class=xl97 width=66 style='width:49pt'>
- <col class=xl71 width=438 style='mso-width-source:userset;mso-width-alt:15587;
+ <col class=xl95 width=66 style='width:49pt'>
+ <col class=xl70 width=438 style='mso-width-source:userset;mso-width-alt:15587;
  width:329pt'>
- <col class=xl97 width=148 style='mso-width-source:userset;mso-width-alt:5262;
+ <col class=xl95 width=148 style='mso-width-source:userset;mso-width-alt:5262;
  width:111pt'>
- <col class=xl95 width=762 style='mso-width-source:userset;mso-width-alt:27107;
+ <col class=xl93 width=762 style='mso-width-source:userset;mso-width-alt:27107;
  width:572pt'>
  <tr height=19 style='height:14.4pt'>
-  <td height=19 class=xl96 width=66 style='height:14.4pt;width:49pt'>&#8470;</td>
-  <td class=xl93 width=438 style='border-left:none;width:329pt'>TASK</td>
-  <td class=xl96 width=148 style='border-left:none;width:111pt'>Link</td>
-  <td class=xl94 width=762 style='border-left:none;width:572pt'>Additional
+  <td height=19 class=xl94 width=66 style='height:14.4pt;width:49pt'>&#8470;</td>
+  <td class=xl91 width=438 style='border-left:none;width:329pt'>TASK</td>
+  <td class=xl94 width=148 style='border-left:none;width:111pt'>Link</td>
+  <td class=xl92 width=762 style='border-left:none;width:572pt'>Additional
   explanation</td>
  </tr>
  <tr height=37 style='mso-height-source:userset;height:27.75pt'>
-  <td height=37 class=xl98 style='height:27.75pt;border-top:none'>1.</td>
-  <td class=xl74 width=438 style='border-top:none;border-left:none;width:329pt'>Create
+  <td height=37 class=xl96 style='height:27.75pt;border-top:none'>1.</td>
+  <td class=xl73 width=438 style='border-top:none;border-left:none;width:329pt'>Create
   a checklist for the&nbsp;[learn.epam.com]&nbsp;application.</td>
-  <td class=xl101 style='border-top:none;border-left:none'><a href="#RANGE!A1">1-2q_Checklist</a></td>
-  <td class=xl99 style='border-top:none;border-left:none'>Please see the list.</td>
+  <td class=xl99 style='border-top:none;border-left:none'><a href="#RANGE!A1">1-2q_Checklist</a></td>
+  <td class=xl97 style='border-top:none;border-left:none'>Please see the list.</td>
  </tr>
  <tr height=480 style='height:360.0pt'>
-  <td height=480 class=xl98 style='height:360.0pt;border-top:none'>2.</td>
-  <td class=xl74 width=438 style='border-top:none;border-left:none;width:329pt'>Point
+  <td height=480 class=xl96 style='height:360.0pt;border-top:none'>2.</td>
+  <td class=xl73 width=438 style='border-top:none;border-left:none;width:329pt'>Point
   out which tests you think should be added to the regression scope and smoke
   scope.</td>
-  <td class=xl101 style='border-top:none;border-left:none'><a href="#RANGE!A1">1-2q_Checklist</a></td>
-  <td class=xl100 width=762 style='border-top:none;border-left:none;width:572pt'>Please
+  <td class=xl99 style='border-top:none;border-left:none'><a href="#RANGE!A1">1-2q_Checklist</a></td>
+  <td class=xl98 width=762 style='border-top:none;border-left:none;width:572pt'>Please
   see the list.<br>
     <br>
     1. Smoke scope.<br>
@@ -111,31 +110,31 @@ else
   combination of Regression Test Selection and Test case Prioritization.</td>
  </tr>
  <tr height=28 style='mso-height-source:userset;height:21.0pt'>
-  <td height=28 class=xl98 style='height:21.0pt;border-top:none'>3.</td>
-  <td class=xl74 width=438 style='border-top:none;border-left:none;width:329pt'>Create
+  <td height=28 class=xl96 style='height:21.0pt;border-top:none'>3.</td>
+  <td class=xl73 width=438 style='border-top:none;border-left:none;width:329pt'>Create
   test cases for smoke testing.</td>
-  <td class=xl101 style='border-top:none;border-left:none'><a href="#RANGE!A1">3q_Test_cases_Smoke</a></td>
-  <td class=xl99 style='border-top:none;border-left:none'>Please see the list.</td>
+  <td class=xl99 style='border-top:none;border-left:none'><a href="#RANGE!A1">3q_Test_cases_Smoke</a></td>
+  <td class=xl97 style='border-top:none;border-left:none'>Please see the list.</td>
  </tr>
  <tr height=38 style='height:28.8pt'>
-  <td height=38 class=xl98 style='height:28.8pt;border-top:none'>4.</td>
-  <td class=xl74 width=438 style='border-top:none;border-left:none;width:329pt'>Compare
+  <td height=38 class=xl96 style='height:28.8pt;border-top:none'>4.</td>
+  <td class=xl73 width=438 style='border-top:none;border-left:none;width:329pt'>Compare
   checklist and test cases and explain what is more reasonable to use and why.</td>
-  <td class=xl101 style='border-top:none;border-left:none'><a href="#RANGE!A1">4q_Compare_CL_TC</a></td>
-  <td class=xl99 style='border-top:none;border-left:none'>Please see the list.</td>
+  <td class=xl99 style='border-top:none;border-left:none'><a href="#RANGE!A1">4q_Compare_CL_TC</a></td>
+  <td class=xl97 style='border-top:none;border-left:none'>Please see the list.</td>
  </tr>
  <tr height=19 style='height:14.4pt'>
-  <td height=19 class=xl97 style='height:14.4pt'></td>
-  <td class=xl71 width=438 style='width:329pt'></td>
-  <td class=xl97></td>
+  <td height=19 class=xl95 style='height:14.4pt'></td>
+  <td class=xl70 width=438 style='width:329pt'></td>
   <td class=xl95></td>
+  <td class=xl93></td>
  </tr>
  <tr height=19 style='height:14.4pt'>
-  <td height=19 class=xl97 style='height:14.4pt'><span
+  <td height=19 class=xl95 style='height:14.4pt'><span
   style='mso-spacerun:yes'> </span></td>
-  <td class=xl71 width=438 style='width:329pt'></td>
-  <td class=xl97></td>
+  <td class=xl70 width=438 style='width:329pt'></td>
   <td class=xl95></td>
+  <td class=xl93></td>
  </tr>
  <![if supportMisalignedColumns]>
  <tr height=0 style='display:none'>
