--- a/Test Documentation/Test Cases/Web_app/TestCases for learn.epam.com _STA course.files/sheet001.htm
+++ b/Test Documentation/Test Cases/Web_app/TestCases for learn.epam.com _STA course.files/sheet001.htm
@@ -82,11 +82,9 @@ else
  <tr class=xl66 height=61 style='mso-height-source:userset;height:45.75pt'>
   <td height=61 class=xl74 width=48 style='height:45.75pt;width:36pt'>ID</td>
   <td class=xl74 width=53 style='border-left:none;width:40pt'>Priority</td>
-  <td class=xl74 width=48 style='border-left:none;width:36pt'><span
-  style='mso-spacerun:yes'> </span>Req. ID</td>
+  <td class=xl74 width=48 style='border-left:none;width:36pt'>Req. ID</td>
   <td class=xl75 width=104 style='border-left:none;width:78pt'>Module</td>
-  <td class=xl74 width=109 style='border-left:none;width:82pt'><span
-  style='mso-spacerun:yes'> </span>Sub-module</td>
+  <td class=xl74 width=109 style='border-left:none;width:82pt'>Sub-module</td>
   <td class=xl74 width=168 style='border-left:none;width:126pt'>Test summary
   (title)</td>
   <td class=xl74 width=202 style='border-left:none;width:151pt'>Preconditions</td>
@@ -102,9 +100,8 @@ else
   <td class=xl69 width=48 style='border-left:none;width:36pt'>X</td>
   <td class=xl70 width=104 style='border-left:none;width:78pt'>User management</td>
   <td class=xl70 width=109 style='border-left:none;width:82pt'>Sign in</td>
-  <td class=xl73 width=168 style='border-left:none;width:126pt'><a
-  href="#RANGE!F9"><span style='color:black;font-weight:700;text-decoration:
-  none'>Login to the system with the Start page</span></a></td>
+  <td class=xl73 width=168 style='border-left:none;width:126pt'>Login to the
+  system with the Start page</td>
   <td class=xl69 width=202 style='border-left:none;width:151pt'>1. The user is
   on the Start page.<br>
     2. The user hasn't logged in to the application yet.</td>
@@ -116,12 +113,11 @@ else
     3. Click on the &quot;Log in&quot; button.<br>
     4. Return on the Start page.<br>
     5. Click on the &quot;Log in to get full experience&quot; button.</td>
-  <td class=xl71 width=365 style='border-left:none;width:274pt'>1.<span
-  style='mso-spacerun:yes'>  </span>The &quot;Log in&quot; button is presented
-  in the right corner of the Main Menu before the &quot;Public App&quot;
-  widget.<br>
-    2.<span style='mso-spacerun:yes'>  </span>The &quot;Log in&quot; button is
-  presented in the on the Start page header on the right.<br>
+  <td class=xl71 width=365 style='border-left:none;width:274pt'>1. The
+  &quot;Log in&quot; button is presented in the right corner of the Main Menu
+  before the &quot;Public App&quot; widget.<br>
+    2. The &quot;Log in&quot; button is presented in the on the Start page
+  header on the right.<br>
     3. The user is redirected to the EPAM Digital Platform
   (https://access.epam.com/auth/....) for further login.<br>
     4. The user is on the Start page again.<br>
@@ -200,15 +196,14 @@ else
   <td class=xl68 width=48 style='border-top:none;border-left:none;width:36pt'>X</td>
   <td class=xl70 width=104 style='border-left:none;width:78pt'>User management</td>
   <td class=xl68 width=109 style='border-top:none;border-left:none;width:82pt'>Sign
-  out<span style='mso-spacerun:yes'> </span></td>
+  out</td>
   <td class=xl73 width=168 style='border-left:none;width:126pt'>Sign out of the
   application</td>
   <td class=xl68 width=202 style='border-top:none;border-left:none;width:151pt'>1.
   The user is logged in to the application.</td>
   <td class=xl68 width=336 style='border-top:none;border-left:none;width:252pt'>1.
   Click on the Avatar (Profile icon) located in the Main Menu.<br>
-    2. Click on the &quot;Sign out&quot; button at the end of<span
-  style='mso-spacerun:yes'>  </span>Dropdown menu.</td>
+    2. Click on the &quot;Sign out&quot; button at the end of Dropdown menu.</td>
   <td class=xl68 width=365 style='border-top:none;border-left:none;width:274pt'>1.
   The dropdown menu of the Avatar opened.<br>
     2. The user has signed out.</td>
@@ -259,8 +254,8 @@ else
     2. The user is on Base Details Page of any course, that not requires
   registration of participants.</td>
   <td class=xl68 width=336 style='border-top:none;border-left:none;width:252pt'>1.
-  Check the presence of two<span style='mso-spacerun:yes'> 
-  </span>&quot;Study&quot; buttons on the Base Details Page of course.<br>
+  Check the presence of two &quot;Study&quot; buttons on the Base Details Page
+  of course.<br>
     2. Click on the &quot;Study&quot; button on the header of this page.<br>
     3. Return on the Base Details Page of course.<br>
     4. Click on the &quot;Study&quot; button in the &quot;Summary&quot; widget
