files names update

--- a/Test Documentation/Checklists/Web_app/Checklists_for_learn.epam.com_STA_course.files/sheet001.htm
+++ b/Test Documentation/Checklists/Web_app/Checklists_for_learn.epam.com_STA_course.files/sheet001.htm
@@ -8,7 +8,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <meta name=ProgId content=Excel.Sheet>
 <meta name=Generator content="Microsoft Excel 15">
 <link id=Main-File rel=Main-File
-href="../Checklists%20for%20learn.epam.com%20_STA%20course.htm">
+href="../Checklists_for_learn.epam.com_STA_course.htm">
 <link rel=File-List href=filelist.xml>
 <link rel=Stylesheet href=stylesheet.css>
 <style>
@@ -35,7 +35,7 @@ function fnUpdateTabs()
 }
 
 if (window.name!="frSheet")
- window.location.replace("../Checklists%20for%20learn.epam.com%20_STA%20course.htm");
+ window.location.replace("../Checklists_for_learn.epam.com_STA_course.htm");
 else
  fnUpdateTabs();
 //-->
@@ -78,7 +78,7 @@ else
   the need for smoke or regression testing</td>
  </tr>
  <tr height=26 style='mso-height-source:userset;height:19.5pt'>
-  <td colspan=8 height=26 class=xl113 style='height:19.5pt'>I. Checklists for
+  <td colspan=8 height=26 class=xl103 style='height:19.5pt'>I. Checklists for
   Functionality of learn.epam.com (on March 2023)</td>
  </tr>
  <tr class=xl94 height=29 style='mso-height-source:userset;height:21.75pt'>
@@ -156,7 +156,7 @@ else
   <td class=xl67 style='border-top:none;border-left:none'>&nbsp;</td>
   <td class=xl74 style='border-top:none;border-left:none'>-</td>
   <td class=xl75 style='border-top:none;border-left:none'>-</td>
-  <td rowspan=2 class=xl105 style='border-bottom:.5pt solid black;border-top:
+  <td rowspan=2 class=xl110 style='border-bottom:.5pt solid black;border-top:
   none'>Non-priority test cases for regression testing.</td>
  </tr>
  <tr height=19 style='height:14.4pt'>
@@ -253,7 +253,7 @@ else
  </tr>
  <tr height=29 style='mso-height-source:userset;height:21.75pt'>
   <td height=29 class=xl95 style='height:21.75pt;border-top:none'>3.1.</td>
-  <td rowspan=7 class=xl114 width=129 style='border-top:none;width:97pt'>&nbsp;</td>
+  <td rowspan=7 class=xl102 width=129 style='border-top:none;width:97pt'>&nbsp;</td>
   <td rowspan=7 class=xl92 width=75 style='border-top:none;width:56pt'>Verify</td>
   <td class=xl90 width=530 style='border-top:none;border-left:none;width:397pt'>The
   working of the &quot;All item&quot; widget is correct.</td>
@@ -293,7 +293,7 @@ else
   <td class=xl67 style='border-top:none;border-left:none'>&nbsp;</td>
   <td class=xl74 style='border-top:none;border-left:none'>-</td>
   <td class=xl74 style='border-top:none;border-left:none'>-</td>
-  <td rowspan=2 class=xl107 width=564 style='border-bottom:.5pt solid black;
+  <td rowspan=2 class=xl112 width=564 style='border-bottom:.5pt solid black;
   border-top:none;width:423pt'>Important functionality or features of the App.
   But the probability of an error as a result of changing other functionality
   is relatively low.<br>
@@ -318,7 +318,7 @@ else
   <td class=xl67 style='border-top:none;border-left:none'>&nbsp;</td>
   <td class=xl74 style='border-top:none;border-left:none'>-</td>
   <td class=xl75 style='border-top:none;border-left:none'>Regression testing</td>
-  <td rowspan=2 class=xl102 style='border-bottom:.5pt solid black;border-top:
+  <td rowspan=2 class=xl105 style='border-bottom:.5pt solid black;border-top:
   none'>Functionalities that are frequently used. Priority test cases.</td>
  </tr>
  <tr height=19 style='height:14.4pt'>
@@ -370,7 +370,7 @@ else
   <td class=xl66 width=74 style='border-top:none;border-left:none;width:55pt'>&nbsp;</td>
   <td class=xl93 style='border-top:none;border-left:none'>Smoke testing</td>
   <td class=xl74 style='border-top:none;border-left:none'>-</td>
-  <td rowspan=3 class=xl107 width=564 style='border-bottom:.5pt solid black;
+  <td rowspan=3 class=xl112 width=564 style='border-bottom:.5pt solid black;
   border-top:none;width:423pt'>Smoke testing as main, minimal mission-critical
   functionality, before planned testing begins.<br>
     Regression testing is possible if the changes could affect on this
@@ -404,7 +404,7 @@ else
   <td class=xl67 style='border-top:none;border-left:none'>&nbsp;</td>
   <td class=xl93 style='border-top:none;border-left:none'>-</td>
   <td class=xl75 style='border-top:none;border-left:none'>Regression testing</td>
-  <td rowspan=2 class=xl102 style='border-bottom:.5pt solid black;border-top:
+  <td rowspan=2 class=xl105 style='border-bottom:.5pt solid black;border-top:
   none'>Functionalities that are frequently used. Priority test cases.</td>
  </tr>
  <tr height=42 style='mso-height-source:userset;height:32.25pt'>
@@ -509,7 +509,7 @@ else
   <td class=xl67 style='border-top:none;border-left:none'>&nbsp;</td>
   <td class=xl74 style='border-top:none;border-left:none'>-</td>
   <td class=xl75 style='border-top:none;border-left:none'>Regression testing</td>
-  <td rowspan=2 class=xl102 style='border-bottom:.5pt solid black;border-top:
+  <td rowspan=2 class=xl105 style='border-bottom:.5pt solid black;border-top:
   none'>Functionalities that are frequently used. Priority test cases.</td>
  </tr>
  <tr height=19 style='height:14.4pt'>
@@ -527,7 +527,7 @@ else
   <td class=xl67 style='border-top:none;border-left:none'>&nbsp;</td>
   <td class=xl74 style='border-top:none;border-left:none'>-</td>
   <td class=xl75 style='border-top:none;border-left:none'>Regression testing</td>
-  <td rowspan=5 class=xl102 style='border-bottom:.5pt solid black;border-top:
+  <td rowspan=5 class=xl105 style='border-bottom:.5pt solid black;border-top:
   none'>Core functionality or features of the App. Priority test cases.</td>
  </tr>
  <tr height=19 style='height:14.4pt'>
@@ -579,7 +579,7 @@ else
   <td class=xl67 style='border-top:none;border-left:none'>&nbsp;</td>
   <td class=xl74 style='border-top:none;border-left:none'>-</td>
   <td class=xl75 style='border-top:none;border-left:none'>Regression testing</td>
-  <td rowspan=2 class=xl102 style='border-bottom:.5pt solid black;border-top:
+  <td rowspan=2 class=xl105 style='border-bottom:.5pt solid black;border-top:
   none'>Functionalities that are frequently used. Priority test cases.</td>
  </tr>
  <tr height=26 style='mso-height-source:userset;height:20.25pt'>
@@ -597,7 +597,7 @@ else
   <td class=xl67 style='border-top:none;border-left:none'>&nbsp;</td>
   <td class=xl74 style='border-top:none;border-left:none'>-</td>
   <td class=xl74 style='border-top:none;border-left:none'>-</td>
-  <td rowspan=2 class=xl105 style='border-bottom:.5pt solid black;border-top:
+  <td rowspan=2 class=xl110 style='border-bottom:.5pt solid black;border-top:
   none'>Non-priority test cases for regression testing.</td>
  </tr>
  <tr height=42 style='mso-height-source:userset;height:31.5pt'>
@@ -623,7 +623,7 @@ else
   <td class=xl67 style='border-top:none;border-left:none'>&nbsp;</td>
   <td class=xl74 style='border-top:none;border-left:none'>-</td>
   <td class=xl74 style='border-top:none;border-left:none'>-</td>
-  <td rowspan=3 class=xl105 style='border-bottom:.5pt solid black;border-top:
+  <td rowspan=3 class=xl110 style='border-bottom:.5pt solid black;border-top:
   none'>Non-priority test cases for regression testing.</td>
  </tr>
  <tr height=19 style='height:14.4pt'>
@@ -691,7 +691,7 @@ else
   <td class=xl74 style='border-top:none;border-left:none'>-</td>
  </tr>
  <tr height=26 style='mso-height-source:userset;height:19.8pt'>
-  <td colspan=8 height=26 class=xl113 style='height:19.8pt'>II. Checklists for
+  <td colspan=8 height=26 class=xl103 style='height:19.8pt'>II. Checklists for
   Non-Functional Testing of learn.epam.com (on March 2023)</td>
  </tr>
  <tr height=20 style='mso-height-source:userset;height:15.0pt'>
@@ -701,14 +701,14 @@ else
  </tr>
  <tr height=20 style='mso-height-source:userset;height:15.0pt'>
   <td rowspan=3 height=58 class=xl95 style='height:43.8pt;border-top:none'>10.1.</td>
-  <td rowspan=3 class=xl112 width=129 style='border-top:none;width:97pt'>&nbsp;</td>
+  <td rowspan=3 class=xl107 width=129 style='border-top:none;width:97pt'>&nbsp;</td>
   <td rowspan=3 class=xl92 width=75 style='border-top:none;width:56pt'>Verify</td>
   <td class=xl91 width=530 style='border-top:none;border-left:none;width:397pt'>A
   font, text color, and color coding of the pages is as per the standard.</td>
   <td class=xl70 width=74 style='border-top:none;border-left:none;width:55pt'>&nbsp;</td>
   <td class=xl74 style='border-top:none;border-left:none'>-</td>
   <td class=xl74 style='border-top:none;border-left:none'>-</td>
-  <td rowspan=3 class=xl105 style='border-bottom:.5pt solid black;border-top:
+  <td rowspan=3 class=xl110 style='border-bottom:.5pt solid black;border-top:
   none'>Non-priority test cases for regression testing.</td>
  </tr>
  <tr height=19 style='height:14.4pt'>
@@ -742,7 +742,7 @@ else
   <td class=xl67 style='border-top:none;border-left:none'>&nbsp;</td>
   <td class=xl74 style='border-top:none;border-left:none'>-</td>
   <td class=xl75 style='border-top:none;border-left:none'>Regression testing</td>
-  <td rowspan=2 class=xl102 style='border-bottom:.5pt solid black;border-top:
+  <td rowspan=2 class=xl105 style='border-bottom:.5pt solid black;border-top:
   none'>Priority test cases.</td>
  </tr>
  <tr height=40 style='mso-height-source:userset;height:30.0pt'>
@@ -806,14 +806,14 @@ else
  </tr>
  <tr height=19 style='height:14.4pt'>
   <td height=19 class=xl95 style='height:14.4pt;border-top:none'>14.1.</td>
-  <td rowspan=5 class=xl112 width=129 style='border-top:none;width:97pt'>&nbsp;</td>
+  <td rowspan=5 class=xl107 width=129 style='border-top:none;width:97pt'>&nbsp;</td>
   <td rowspan=5 class=xl92 width=75 style='border-top:none;width:56pt'>Verify</td>
   <td class=xl90 width=530 style='border-top:none;border-left:none;width:397pt'>User
   data is protected.</td>
   <td class=xl67 style='border-top:none;border-left:none'>&nbsp;</td>
   <td class=xl74 style='border-top:none;border-left:none'>-</td>
   <td class=xl74 style='border-top:none;border-left:none'>-</td>
-  <td rowspan=4 class=xl102 style='border-bottom:.5pt solid black;border-top:
+  <td rowspan=4 class=xl105 style='border-bottom:.5pt solid black;border-top:
   none'>Priority test cases. Complex Test Cases.</td>
  </tr>
  <tr height=19 style='height:14.4pt'>
@@ -858,7 +858,7 @@ else
  </tr>
  <tr height=58 style='height:43.2pt'>
   <td height=58 class=xl95 style='height:43.2pt;border-top:none'>15.1.</td>
-  <td rowspan=2 class=xl112 width=129 style='border-top:none;width:97pt'>&nbsp;</td>
+  <td rowspan=2 class=xl107 width=129 style='border-top:none;width:97pt'>&nbsp;</td>
   <td rowspan=2 class=xl92 width=75 style='border-top:none;width:56pt'>Verify</td>
   <td class=xl90 width=530 style='border-top:none;border-left:none;width:397pt'>Users
   can use the application easy, convenient, and effective.<br>
@@ -867,7 +867,7 @@ else
   <td class=xl67 style='border-top:none;border-left:none'>&nbsp;</td>
   <td class=xl74 style='border-top:none;border-left:none'>-</td>
   <td class=xl74 style='border-top:none;border-left:none'>-</td>
-  <td rowspan=2 class=xl105 style='border-bottom:.5pt solid black;border-top:
+  <td rowspan=2 class=xl110 style='border-bottom:.5pt solid black;border-top:
   none'>Non-priority test cases for regression testing.</td>
  </tr>
  <tr height=32 style='mso-height-source:userset;height:24.0pt'>
@@ -885,14 +885,14 @@ else
  </tr>
  <tr height=37 style='mso-height-source:userset;height:27.75pt'>
   <td height=37 class=xl95 style='height:27.75pt;border-top:none'>16.1.</td>
-  <td rowspan=2 class=xl110 width=129 style='border-top:none;width:97pt'>&nbsp;</td>
+  <td rowspan=2 class=xl104 width=129 style='border-top:none;width:97pt'>&nbsp;</td>
   <td rowspan=2 class=xl92 width=75 style='border-top:none;width:56pt'>Verify</td>
   <td class=xl90 width=530 style='border-top:none;border-left:none;width:397pt'>The
   possibility of loading the application within a specified amount of time.</td>
   <td class=xl67 style='border-top:none;border-left:none'>&nbsp;</td>
   <td class=xl74 style='border-top:none;border-left:none'>-</td>
   <td class=xl75 style='border-top:none;border-left:none'>Regression testing</td>
-  <td rowspan=2 class=xl102 style='border-bottom:.5pt solid black;border-top:
+  <td rowspan=2 class=xl105 style='border-bottom:.5pt solid black;border-top:
   none'>Priority test cases. Complex Test Cases.</td>
  </tr>
  <tr height=66 style='mso-height-source:userset;height:50.25pt'>
@@ -960,7 +960,7 @@ else
   <td class=xl68 width=75 style='width:56pt'></td>
   <td class=xl69 width=530 style='width:397pt'></td>
   <td class=xl65></td>
-  <td colspan=3 class=xl100>Additionally</td>
+  <td colspan=3 class=xl108>Additionally</td>
  </tr>
  <tr height=38 style='height:28.8pt'>
   <td height=38 class=xl96 style='height:28.8pt'></td>
