--- a/Test Documentation/Test Cases/Web_app/TestCases_for_learn.epam.com_STA_course.files/tabstrip.htm
+++ b/Test Documentation/Test Cases/Web_app/TestCases_for_learn.epam.com_STA_course.files/tabstrip.htm
@@ -4,7 +4,7 @@
 <meta name=ProgId content=Excel.Sheet>
 <meta name=Generator content="Microsoft Excel 15">
 <link id=Main-File rel=Main-File
-href="../TestCases%20for%20learn.epam.com%20_STA%20course.htm">
+href="../TestCases_for_learn.epam.com_STA_course.htm">
 
 <script language="JavaScript">
 <!--
