--- a/Test Documentation/Test Cases/Web_app/TestCases_for_learn.epam.com_STA_course.htm
+++ b/Test Documentation/Test Cases/Web_app/TestCases_for_learn.epam.com_STA_course.htm
@@ -9,9 +9,9 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <meta name=ProgId content=Excel.Sheet>
 <meta name=Generator content="Microsoft Excel 15">
 <link rel=File-List
-href="Checklists%20for%20learn.epam.com%20_STA%20course.files/filelist.xml">
+href="TestCases_for_learn.epam.com_STA_course.files/filelist.xml">
 <![if !supportTabStrip]>
-<link id="shLink" href="Checklists%20for%20learn.epam.com%20_STA%20course.files/sheet001.htm">
+<link id="shLink" href="TestCases_for_learn.epam.com_STA_course.files/sheet001.htm">
 
 <link id="shLink">
 
@@ -20,7 +20,7 @@ href="Checklists%20for%20learn.epam.com%20_STA%20course.files/filelist.xml">
  var c_lTabs=1;
 
  var c_rgszSh=new Array(c_lTabs);
- c_rgszSh[0] = "Checklist learn.epam.com";
+ c_rgszSh[0] = "Test_cases_Smoke_learn.epam.com";
 
 
 
@@ -298,15 +298,15 @@ function fnSetActiveSheet(iSh)
  <x:ExcelWorkbook>
   <x:ExcelWorksheets>
    <x:ExcelWorksheet>
-    <x:Name>Checklist learn.epam.com</x:Name>
+    <x:Name>Test_cases_Smoke_learn.epam.com</x:Name>
     <x:WorksheetSource
-     HRef="Checklists%20for%20learn.epam.com%20_STA%20course.files/sheet001.htm"/>
+     HRef="TestCases_for_learn.epam.com_STA_course.files/sheet001.htm"/>
    </x:ExcelWorksheet>
   </x:ExcelWorksheets>
   <x:Stylesheet
-   HRef="Checklists%20for%20learn.epam.com%20_STA%20course.files/stylesheet.css"/>
-  <x:WindowHeight>21096</x:WindowHeight>
-  <x:WindowWidth>32767</x:WindowWidth>
+   HRef="TestCases_for_learn.epam.com_STA_course.files/stylesheet.css"/>
+  <x:WindowHeight>18120</x:WindowHeight>
+  <x:WindowWidth>18780</x:WindowWidth>
   <x:WindowTopX>32767</x:WindowTopX>
   <x:WindowTopY>32767</x:WindowTopY>
   <x:ProtectStructure>False</x:ProtectStructure>
@@ -316,8 +316,8 @@ function fnSetActiveSheet(iSh)
 </head>
 
 <frameset rows="*,39" border=0 width=0 frameborder=no framespacing=0>
- <frame src="Checklists%20for%20learn.epam.com%20_STA%20course.files/sheet001.htm" name="frSheet">
- <frame src="Checklists%20for%20learn.epam.com%20_STA%20course.files/tabstrip.htm" name="frTabs" marginwidth=0 marginheight=0>
+ <frame src="TestCases_for_learn.epam.com_STA_course.files/sheet001.htm" name="frSheet">
+ <frame src="TestCases_for_learn.epam.com_STA_course.files/tabstrip.htm" name="frTabs" marginwidth=0 marginheight=0>
  <noframes>
   <body>
    <p>This page uses frames, but your browser doesn't support them.</p>
