--- a/Test Documentation/Test Cases/Web_app/TestCases_for_learn.epam.com_STA_course.files/sheet001.htm
+++ b/Test Documentation/Test Cases/Web_app/TestCases_for_learn.epam.com_STA_course.files/sheet001.htm
@@ -8,7 +8,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <meta name=ProgId content=Excel.Sheet>
 <meta name=Generator content="Microsoft Excel 15">
 <link id=Main-File rel=Main-File
-href="../TestCases%20for%20learn.epam.com%20_STA%20course.htm">
+href="../TestCases_for_learn.epam.com_STA_course.htm">
 <link rel=File-List href=filelist.xml>
 <link rel=Stylesheet href=stylesheet.css>
 <style>
@@ -35,7 +35,7 @@ function fnUpdateTabs()
 }
 
 if (window.name!="frSheet")
- window.location.replace("../TestCases%20for%20learn.epam.com%20_STA%20course.htm");
+ window.location.replace("../TestCases_for_learn.epam.com_STA_course.htm");
 else
  fnUpdateTabs();
 //-->
