new readme table style

--- a/Test_Documentation/Test_Techniques/Test_Techniques_STA_course.htm
+++ b/Test_Documentation/Test_Techniques/Test_Techniques_STA_course.htm
@@ -19,7 +19,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
  var c_lTabs=1;
 
  var c_rgszSh=new Array(c_lTabs);
- c_rgszSh[0] = "Task_1.2";
+ c_rgszSh[0] = "Test_Techniques_STA_course";
 
 
 
@@ -297,13 +297,13 @@ function fnSetActiveSheet(iSh)
  <x:ExcelWorkbook>
   <x:ExcelWorksheets>
    <x:ExcelWorksheet>
-    <x:Name>Task_1.2</x:Name>
+    <x:Name>Test_Techniques_STA_course</x:Name>
     <x:WorksheetSource HRef="Test_Techniques_STA_course.files/sheet001.htm"/>
    </x:ExcelWorksheet>
   </x:ExcelWorksheets>
   <x:Stylesheet HRef="Test_Techniques_STA_course.files/stylesheet.css"/>
-  <x:WindowHeight>20976</x:WindowHeight>
-  <x:WindowWidth>19380</x:WindowWidth>
+  <x:WindowHeight>20364</x:WindowHeight>
+  <x:WindowWidth>32767</x:WindowWidth>
   <x:WindowTopX>32767</x:WindowTopX>
   <x:WindowTopY>32767</x:WindowTopY>
   <x:ProtectStructure>False</x:ProtectStructure>
