change formating in web pages

--- a/Test_Documentation/Test_Cases/Web_app/TestCases_for_learn.epam.com_STA_course.htm
+++ b/Test_Documentation/Test_Cases/Web_app/TestCases_for_learn.epam.com_STA_course.htm
@@ -5,7 +5,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 
 <head>
 <meta name="Excel Workbook Frameset">
-<meta http-equiv=Content-Type content="text/html; charset=windows-1252">
+<meta http-equiv=Content-Type content="text/html; charset=utf-8">
 <meta name=ProgId content=Excel.Sheet>
 <meta name=Generator content="Microsoft Excel 15">
 <link rel=File-List
@@ -305,8 +305,8 @@ function fnSetActiveSheet(iSh)
   </x:ExcelWorksheets>
   <x:Stylesheet
    HRef="TestCases_for_learn.epam.com_STA_course.files/stylesheet.css"/>
-  <x:WindowHeight>18120</x:WindowHeight>
-  <x:WindowWidth>18780</x:WindowWidth>
+  <x:WindowHeight>19992</x:WindowHeight>
+  <x:WindowWidth>32767</x:WindowWidth>
   <x:WindowTopX>32767</x:WindowTopX>
   <x:WindowTopY>32767</x:WindowTopY>
   <x:ProtectStructure>False</x:ProtectStructure>
