--- a/Test_Documentation/Checklists/Web_app/Checklists_for_learn.epam.com_STA_course.htm
+++ b/Test_Documentation/Checklists/Web_app/Checklists_for_learn.epam.com_STA_course.htm
@@ -5,7 +5,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 
 <head>
 <meta name="Excel Workbook Frameset">
-<meta http-equiv=Content-Type content="text/html; charset=windows-1252">
+<meta http-equiv=Content-Type content="text/html; charset=utf-8">
 <meta name=ProgId content=Excel.Sheet>
 <meta name=Generator content="Microsoft Excel 15">
 <link rel=File-List
@@ -20,7 +20,7 @@ href="Checklists_for_learn.epam.com_STA_course.files/filelist.xml">
  var c_lTabs=1;
 
  var c_rgszSh=new Array(c_lTabs);
- c_rgszSh[0] = "Checklist learn.epam.com";
+ c_rgszSh[0] = "ChecklistÂ learn.epam.com";
 
 
 
