new mobile testing project

--- a/Test_Documentation/Test_Cases/Web_app/TestCases_for_learn.epam.com_STA_course.files/sheet001.htm
+++ b/Test_Documentation/Test_Cases/Web_app/TestCases_for_learn.epam.com_STA_course.files/sheet001.htm
@@ -70,13 +70,13 @@ else
  <col class=xl65 width=127 style='mso-width-source:userset;mso-width-alt:3612;
  width:76pt'>
  <tr height=57 style='mso-height-source:userset;height:34.2pt'>
-  <td colspan=11 height=57 class=xl80 width=2042 style='height:34.2pt;
+  <td colspan=11 height=57 class=xl79 width=2042 style='height:34.2pt;
   width:1226pt'><a href="https://i-tester.github.io/Portfolio_Tester/"
-  target="_parent">Back on main page</a></td>
+  target="_parent">Back on the main page</a></td>
  </tr>
  <tr height=46 style='mso-height-source:userset;height:27.6pt'>
-  <td colspan=11 height=46 class=xl77 width=2042 style='height:27.6pt;
-  width:1226pt'>Test cases for Smoke Testing scope for learn.epam.com (on March
+  <td colspan=11 height=46 class=xl80 width=2042 style='height:27.6pt;
+  width:1226pt'>Test cases for Smoke Testing scope for learn.epam.com (on April
   2023)</td>
  </tr>
  <tr class=xl66 height=76 style='mso-height-source:userset;height:45.75pt'>
@@ -284,7 +284,7 @@ else
  </tr>
  <tr height=63 style='mso-height-source:userset;height:37.8pt'>
   <td colspan=6 height=63 class=xl66 width=662 style='height:37.8pt;width:398pt'></td>
-  <td colspan=5 class=xl78 width=1380 style='width:828pt'></td>
+  <td colspan=5 class=xl77 width=1380 style='width:828pt'></td>
  </tr>
  <![if supportMisalignedColumns]>
  <tr height=0 style='display:none'>
