--- a/Test_Documentation/Test_Techniques/Test_Techniques_STA_course.files/sheet001.htm
+++ b/Test_Documentation/Test_Techniques/Test_Techniques_STA_course.files/sheet001.htm
@@ -85,33 +85,33 @@ else
   <td class=xl66 width=91 style='width:55pt'></td>
   <td class=xl66 width=91 style='width:55pt'></td>
   <td class=xl66 width=91 style='width:55pt'></td>
-  <td colspan=3 class=xl125 width=273 style='width:165pt'><a
+  <td colspan=3 class=xl98 width=273 style='width:165pt'><a
   href="https://i-tester.github.io/Portfolio_Tester/" target="_parent">Back on
-  main page</a></td>
+  the main page</a></td>
   <td class=xl66 width=554 style='width:332pt'></td>
  </tr>
  <tr height=55 style='mso-height-source:userset;height:33.0pt'>
-  <td colspan=17 height=55 class=xl126 style='border-right:.5pt solid black;
+  <td colspan=17 height=55 class=xl107 style='border-right:.5pt solid black;
   height:33.0pt'><font class="font15">Task from testing courses:<span
   style='mso-spacerun:yes'>  </span></font><font class="font21">Apply the
   appropriate test technique(s) for testing the feature.</font></td>
-  <td rowspan=8 class=xl104 width=554 style='border-bottom:.5pt solid black;
+  <td rowspan=8 class=xl105 width=554 style='border-bottom:.5pt solid black;
   width:332pt'></td>
  </tr>
  <tr height=27 style='mso-height-source:userset;height:16.5pt'>
   <td height=27 class=xl97 width=225 style='height:16.5pt;width:135pt'>Domaine</td>
-  <td colspan=16 class=xl117 style='border-left:none'>Insurance</td>
+  <td colspan=16 class=xl115 style='border-left:none'>Insurance</td>
  </tr>
  <tr height=27 style='mso-height-source:userset;height:16.5pt'>
   <td height=27 class=xl65 width=225 style='height:16.5pt;border-top:none;
   width:135pt'>Feature</td>
-  <td colspan=16 class=xl120 style='border-right:.5pt solid black;border-left:
+  <td colspan=16 class=xl116 style='border-right:.5pt solid black;border-left:
   none'>Life insurance module for the company employees.</td>
  </tr>
  <tr height=196 style='mso-height-source:userset;height:117.6pt'>
   <td height=196 class=xl96 width=225 style='height:117.6pt;width:135pt'>The
   feature description / task</td>
-  <td colspan=16 class=xl111 width=1437 style='border-right:.5pt solid black;
+  <td colspan=16 class=xl102 width=1437 style='border-right:.5pt solid black;
   border-left:none;width:867pt'>You've been assigned to a project for an
   insurance company. Now your main priority is a life insurance module for the
   company employees. The life insurance program is provided to all employees.
@@ -130,7 +130,7 @@ else
  <tr height=133 style='mso-height-source:userset;height:79.8pt'>
   <td height=133 class=xl96 width=225 style='height:79.8pt;width:135pt'>Applied
   test techniques</td>
-  <td colspan=16 class=xl111 width=1437 style='border-right:.5pt solid black;
+  <td colspan=16 class=xl102 width=1437 style='border-right:.5pt solid black;
   border-left:none;width:867pt'>1. Decision table<br>
     2. Equivalence partitioning<br>
     3. Boundary value analysis<br>
@@ -141,7 +141,7 @@ else
   <td height=108 class=xl90 width=225 style='height:64.8pt;width:135pt'>Technique(s):<br>
     <br>
     <font class="font15">1. Decision table</font></td>
-  <td colspan=16 class=xl108 width=1437 style='border-left:none;width:867pt'>I
+  <td colspan=16 class=xl114 width=1437 style='border-left:none;width:867pt'>I
   used two tables as conditions from table 2 not influence on conditions from
   table 1. This approach made it more convenient to divide the conditions,
   which prevented Table 1 from becoming too large and difficult. I also noted
@@ -170,7 +170,7 @@ else
     - the cells also contain meaningful text.</td>
  </tr>
  <tr height=22 style='mso-height-source:userset;height:13.5pt'>
-  <td colspan=17 height=22 class=xl123 width=1662 style='height:13.5pt;
+  <td colspan=17 height=22 class=xl101 width=1662 style='height:13.5pt;
   width:1002pt'>&nbsp;</td>
  </tr>
  <tr height=52 style='mso-height-source:userset;height:31.5pt'>
@@ -214,7 +214,7 @@ else
  <tr height=24 style='height:14.4pt'>
   <td height=24 class=xl69 width=225 style='height:14.4pt;border-top:none;
   width:135pt'>Conditions</td>
-  <td colspan=16 class=xl98 width=1437 style='border-left:none;width:867pt'>&nbsp;</td>
+  <td colspan=16 class=xl112 width=1437 style='border-left:none;width:867pt'>&nbsp;</td>
   <td class=xl83 width=554 style='border-top:none;width:332pt'>&nbsp;</td>
  </tr>
  <tr height=80 style='mso-height-source:userset;height:48.0pt'>
@@ -341,7 +341,7 @@ else
  <tr height=24 style='height:14.4pt'>
   <td height=24 class=xl67 width=225 style='height:14.4pt;border-top:none;
   width:135pt'>Actions</td>
-  <td colspan=16 class=xl98 width=1437 style='border-left:none;width:867pt'>&nbsp;</td>
+  <td colspan=16 class=xl112 width=1437 style='border-left:none;width:867pt'>&nbsp;</td>
   <td class=xl83 width=554 style='border-top:none;width:332pt'>&nbsp;</td>
  </tr>
  <tr height=50 style='mso-height-source:userset;height:30.0pt'>
@@ -484,9 +484,9 @@ else
   <td class=xl87 width=91 style='border-top:none;border-left:none;width:55pt'>$165,00</td>
  </tr>
  <tr height=42 style='mso-height-source:userset;height:25.5pt'>
-  <td colspan=17 height=42 class=xl103 width=1662 style='height:25.5pt;
+  <td colspan=17 height=42 class=xl122 width=1662 style='height:25.5pt;
   width:1002pt'>&nbsp;</td>
-  <td rowspan=25 class=xl103 width=554 style='border-top:none;width:332pt'>&nbsp;</td>
+  <td rowspan=25 class=xl122 width=554 style='border-top:none;width:332pt'>&nbsp;</td>
  </tr>
  <tr height=48 style='height:28.8pt'>
   <td height=48 class=xl70 width=225 style='height:28.8pt;width:135pt'>Decision
@@ -500,12 +500,12 @@ else
   <td class=xl69 width=91 style='border-left:none;width:55pt'>Rule 7</td>
   <td class=xl69 width=91 style='border-left:none;width:55pt'>Rule 8</td>
   <td class=xl69 width=100 style='border-left:none;width:60pt'>Rule 9</td>
-  <td colspan=7 rowspan=8 class=xl104 width=630 style='width:380pt'></td>
+  <td colspan=7 rowspan=8 class=xl105 width=630 style='width:380pt'></td>
  </tr>
  <tr height=24 style='height:14.4pt'>
   <td height=24 class=xl69 width=225 style='height:14.4pt;border-top:none;
   width:135pt'>Conditions</td>
-  <td colspan=8 class=xl98 width=707 style='border-right:.5pt solid black;
+  <td colspan=8 class=xl112 width=707 style='border-right:.5pt solid black;
   border-left:none;width:427pt'>&nbsp;</td>
   <td class=xl66 width=100 style='width:60pt'></td>
  </tr>
@@ -619,19 +619,19 @@ else
   cost for Main program <br>
     + 100 USD + 150 USD</td>
   <td class=xl66 width=84 style='width:50pt'></td>
-  <td colspan=6 class=xl110 width=546 style='width:330pt'>The cost of car
+  <td colspan=6 class=xl127 width=546 style='width:330pt'>The cost of car
   insurance for 50 USD not included as we test life insurance program.
   Discounts in the presence of such insurance are considered in the decision
   table.</td>
  </tr>
  <tr height=45 style='mso-height-source:userset;height:27.0pt'>
-  <td colspan=17 height=45 class=xl118 width=1662 style='height:27.0pt;
+  <td colspan=17 height=45 class=xl99 width=1662 style='height:27.0pt;
   width:1002pt'>&nbsp;</td>
  </tr>
  <tr height=68 style='mso-height-source:userset;height:40.8pt'>
   <td height=68 class=xl90 width=225 style='height:40.8pt;width:135pt'>Technique(s)<br>
     <font class="font15">2. Domain testing</font></td>
-  <td colspan=16 class=xl108 width=1437 style='border-left:none;width:867pt'>&nbsp;</td>
+  <td colspan=16 class=xl114 width=1437 style='border-left:none;width:867pt'>&nbsp;</td>
  </tr>
  <tr height=512 style='mso-height-source:userset;height:307.5pt'>
   <td height=512 class=xl93 width=225 style='height:307.5pt;border-top:none;
@@ -669,7 +669,7 @@ else
  <tr height=437 style='mso-height-source:userset;height:262.5pt'>
   <td height=437 class=xl93 width=225 style='height:262.5pt;border-top:none;
   width:135pt'>2.2. Boundary value analysis</td>
-  <td colspan=16 class=xl107 width=1437 style='border-left:none;width:867pt'><font
+  <td colspan=16 class=xl125 width=1437 style='border-left:none;width:867pt'><font
   class="font7">The common minimum coverage standard for decision table testing
   is to have at least one test case per decision rule in the table. This
   typically involves covering all combinations of conditions. <br>
@@ -702,11 +702,11 @@ else
   equal number of days).</font></td>
  </tr>
  <tr height=251 style='mso-height-source:userset;height:150.75pt'>
-  <td rowspan=3 height=763 class=xl124 width=225 style='height:458.25pt;
+  <td rowspan=3 height=763 class=xl100 width=225 style='height:458.25pt;
   border-top:none;width:135pt'>Different options for BVA depending on
   development design (three values approach as this is a high-risk system),
   which are not clear from the task conditions:</td>
-  <td colspan=16 class=xl105 width=1437 style='border-left:none;width:867pt'>BVA
+  <td colspan=16 class=xl123 width=1437 style='border-left:none;width:867pt'>BVA
   for years only in integers as indivisible units:<br>
     <br>
     1) -1 year (invalid value, work experience cannot be expressed in negative
@@ -722,7 +722,7 @@ else
   values (4st class) + 4 Rules T1 * 3 boundary values (5st class) = 45</td>
  </tr>
  <tr height=280 style='mso-height-source:userset;height:168.0pt'>
-  <td colspan=16 height=280 class=xl105 width=1437 style='height:168.0pt;
+  <td colspan=16 height=280 class=xl123 width=1437 style='height:168.0pt;
   border-left:none;width:867pt'>BVA if days are taken into account:<br>
     <br>
     1) -1 day (invalid value, work experience cannot be expressed in negative
@@ -741,7 +741,7 @@ else
   values (4st class) + 4 Rules T1 * 3 boundary values (5st class) = 46</td>
  </tr>
  <tr height=232 style='mso-height-source:userset;height:139.5pt'>
-  <td colspan=16 height=232 class=xl105 width=1437 style='height:139.5pt;
+  <td colspan=16 height=232 class=xl123 width=1437 style='height:139.5pt;
   border-left:none;width:867pt'>BVA for years are expressed in decimals:<br>
     1) -0.01 years; 0.00 years (invalid class);<br>
     2) 0.01 years; 4.99 years; 5.00 years (the reaction of the system is not
@@ -757,7 +757,7 @@ else
  <tr height=91 style='mso-height-source:userset;height:54.75pt'>
   <td height=91 class=xl80 width=225 style='height:54.75pt;border-top:none;
   width:135pt'>&nbsp;</td>
-  <td colspan=16 class=xl107 width=1437 style='border-left:none;width:867pt'>In
+  <td colspan=16 class=xl125 width=1437 style='border-left:none;width:867pt'>In
   final, test cases = 55:<br>
     - decision table 1:<span style='mso-spacerun:yes'>  </span>46<br>
     -<span style='mso-spacerun:yes'>  </span>decision table 2:<span
@@ -766,7 +766,7 @@ else
  <tr height=373 style='mso-height-source:userset;height:224.25pt'>
   <td height=373 class=xl94 style='height:224.25pt;border-top:none'>3. Error
   guessing</td>
-  <td colspan=16 class=xl109 width=1437 style='border-left:none;width:867pt'>A
+  <td colspan=16 class=xl126 width=1437 style='border-left:none;width:867pt'>A
   methodical approach to the error guessing technique is to create a list of
   possible errors, defects, and failures, and design tests that will expose
   those failures and the defects that caused them.<br>
@@ -2385,7 +2385,7 @@ AQAAAA==
   style='mso-ignore:vglayout2'>
   <table cellpadding=0 cellspacing=0>
    <tr>
-    <td colspan=16 height=678 class=xl118 width=1437 style='height:407.25pt;
+    <td colspan=16 height=678 class=xl99 width=1437 style='height:407.25pt;
     border-left:none;width:867pt'>&nbsp;</td>
    </tr>
   </table>
@@ -4058,7 +4058,7 @@ AIQBAADvbAEAAAA=
   style='mso-ignore:vglayout2'>
   <table cellpadding=0 cellspacing=0>
    <tr>
-    <td colspan=16 height=676 class=xl118 width=1437 style='height:405.75pt;
+    <td colspan=16 height=676 class=xl99 width=1437 style='height:405.75pt;
     border-left:none;width:867pt'>&nbsp;</td>
    </tr>
   </table>
@@ -5691,7 +5691,7 @@ SwUGAAAAAAYABgCEAQAA2GMBAAAA
   style='mso-ignore:vglayout2'>
   <table cellpadding=0 cellspacing=0>
    <tr>
-    <td colspan=16 height=682 class=xl118 width=1437 style='height:409.5pt;
+    <td colspan=16 height=682 class=xl99 width=1437 style='height:409.5pt;
     border-left:none;width:867pt'>&nbsp;</td>
    </tr>
   </table>
@@ -5700,7 +5700,7 @@ SwUGAAAAAAYABgCEAQAA2GMBAAAA
  <tr height=24 style='height:14.4pt'>
   <td height=24 class=xl81 width=225 style='height:14.4pt;border-top:none;
   width:135pt'>12 generate Pairwise<span style='mso-spacerun:yes'> </span></td>
-  <td colspan=16 class=xl119 style='border-left:none'>The coverage is extremely
+  <td colspan=16 class=xl128 style='border-left:none'>The coverage is extremely
   low.</td>
  </tr>
  <![if supportMisalignedColumns]>
